appId: swmansion.enriched.markdown.example
tags:
  - input
  - smoke
  - inline
  - link
---
- launchApp

- runFlow:
    file: '../../../../subflows/move_to_playground.yaml'

- tapOn:
    id: toolbar-link

- tapOn:
    id: link-modal-text-input

- inputText: 'Click here'

- tapOn:
    id: link-modal-url-input

- inputText: 'https://example.com'

- tapOn:
    id: link-modal-save

- tapOn:
    text: 'Click here'

- assertVisible: 'Link active: yes'

- assertVisible: 'Link destination: https://example.com'
